--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -3,4 +3,5 @@
     <string name="zero">0</string>
     <string name="advertiser">Advertiser</string>
     <string name="scanner">Scanner</string>
+    <string name="history">History</string>
 </resources>
