--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
 
     <string name="menu_advertiser">Advertiser</string>
     <string name="menu_scanner">Scanner</string>
-    <string name="menu_combined">Combined</string>
+    <string name="menu_history">History</string>
     <!-- Preference Titles -->
     <string name="messages_header">Messages</string>
     <string name="sync_header">Sync</string>
@@ -26,4 +26,5 @@
     <string name="zero">0</string>
     <string name="advertiser">Advertiser</string>
     <string name="scanner">Scanner</string>
+    <string name="history">History</string>
 </resources>
